--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "it.fmt.reversi.android"
+        applicationId "it.fmt.it.fmt.games.reversi.android.reversi.android"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'it.fmt.games.reversi:reversi-core:0.1.0-SNAPSHOT:jdk8'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
