--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -7,23 +9,28 @@ android {
         applicationId "it.fmt.it.fmt.games.reversi.android.reversi.android"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 100
-        versionName "1.0.0"
+        versionCode 101
+        versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-//    signingConfigs {
-//        config {
-//            keyAlias System.getenv("GRADLE_KEYSTORE_ALIAS")
-//            keyPassword System.getenv("GRADLE_KEYSTORE_ALIAS_PASSWORD")
-//            storeFile file(System.getenv("GRADLE_KEYSTORE_FILE"))
-//            storePassword System.getenv("GRADLE_KEYSTORE_PASSWORD")
-//        }
-//    }
+
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+
+    signingConfigs {
+        config {
+            storeFile file(properties.getProperty("key.store"))
+            storePassword properties.getProperty("key.store.password")
+            keyAlias = properties.getProperty("key.alias")
+            keyPassword properties.getProperty("key.alias.password")
+        }
+    }
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
     compileOptions {
