--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,18 @@
 apply plugin: 'com.android.application'
 
 
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "it.fmt.it.fmt.games.reversi.android.reversi.android"
+        applicationId "it.fmt.games.reversi.android"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 101
         versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        setProperty("archivesBaseName", "$applicationId-$versionName")
     }
 
     Properties properties = new Properties()
