--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "it.fmt.games.reversi.android"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 107
-        versionName "1.0.7"
+        versionCode 108
+        versionName "1.0.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         setProperty("archivesBaseName", "$applicationId-$versionName")
@@ -28,10 +28,15 @@ android {
         }
     }
     buildTypes {
+        debug {
+            buildConfigField "long", "THINKING_TIME", '1200'
+        }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
+
+            buildConfigField "long", "THINKING_TIME", '1200'
         }
     }
     compileOptions {
