--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "it.fmt.games.reversi.android"
         minSdkVersion 24
@@ -30,13 +30,17 @@ android {
     buildTypes {
         debug {
             buildConfigField "long", "THINKING_TIME", '1200'
+            buildConfigField "boolean", "LOG_ENABLED", "true"
         }
         release {
+            buildConfigField "boolean", "LOG_ENABLED", "false"
+            buildConfigField "long", "THINKING_TIME", '1200'
+
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
 
-            buildConfigField "long", "THINKING_TIME", '1200'
+
         }
     }
     compileOptions {
@@ -46,6 +50,7 @@ android {
 }
 
 dependencies {
+
     def lifecycle_version = '2.2.0'
 
     // ViewModel and LiveData
@@ -57,14 +62,29 @@ dependencies {
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'com.jakewharton:butterknife:10.2.0'
-    implementation 'it.fmt.games.reversi:reversi-core:1.0.0:jdk8'
+
+    // reversi
+    implementation 'it.fmt.games.reversi:reversi-core:1.1.2:jdk8'
+
+    // web-service/web-socket
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    //implementation "com.github.tinder.scarlet:scarlet:0.1.10"
+
+
+    // Dependency Injection
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.28.1'
+    implementation 'com.google.dagger:dagger:2.28.1'
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    androidTestImplementation 'androidx.test:rules:1.2.0-beta01'
+    androidTestImplementation 'androidx.test:rules:1.3.0-rc01'
 }
