--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -77,6 +77,9 @@ dependencies {
     // Dependency Injection
     annotationProcessor 'com.google.dagger:dagger-compiler:2.28.1'
     implementation 'com.google.dagger:dagger:2.28.1'
+
+    // firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
