--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
+
 
 android {
     compileSdkVersion 29
@@ -47,6 +49,10 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -70,16 +76,36 @@ dependencies {
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
     //implementation "com.github.tinder.scarlet:scarlet:0.1.10"
+    implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
 
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
     // Dependency Injection
     annotationProcessor 'com.google.dagger:dagger-compiler:2.28.1'
     implementation 'com.google.dagger:dagger:2.28.1'
 
+    // Jackson JSON
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.4'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.4'
+
+    // logger
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     // firebase
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
+
+
+    testImplementation 'net.lachlanmckee:timber-junit-rule:1.0.1'
+    // https://stackoverflow.com/questions/35562238/log-messages-in-android-studio-junit-test
+//    testImplementation 'org.powermock:powermock:1.6.5'
+//    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
+//    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
