--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,12 @@ android {
     }
     buildTypes {
         debug {
-            buildConfigField "long", "THINKING_TIME", '1200'
+            buildConfigField "long", "THINKING_TIME", '100'
             buildConfigField "boolean", "LOG_ENABLED", "true"
         }
         release {
-            buildConfigField "boolean", "LOG_ENABLED", "false"
             buildConfigField "long", "THINKING_TIME", '1200'
+            buildConfigField "boolean", "LOG_ENABLED", "false"
 
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -60,6 +60,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
     def lifecycle_version = '2.2.0'
 
     // ViewModel and LiveData
@@ -72,13 +73,18 @@ dependencies {
     // reversi
     implementation 'it.fmt.games.reversi:reversi-core:1.1.2:jdk8'
 
+    // OkHttp
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
     // web-service/web-socket
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
-    //implementation "com.github.tinder.scarlet:scarlet:0.1.10"
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    // Web socket
     implementation 'com.github.NaikSoftware:StompProtocolAndroid:1.6.4'
 
     // RxJava
@@ -90,8 +96,8 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.28.1'
 
     // Jackson JSON
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.10.4'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.4'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
 
     // logger
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -109,7 +115,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
