--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,11 @@ android {
 dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     def lifecycle_version = '2.2.0'
+    def nav_version = '2.3.0'
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
