--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
-
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     buildFeatures {
@@ -14,8 +14,8 @@ android {
         applicationId "it.fmt.games.reversi.android"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 110
-        versionName "1.1.0"
+        versionCode 200
+        versionName "2.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         setProperty("archivesBaseName", "$applicationId-$versionName")
