--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,13 @@ android {
     }
 
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.0"
     defaultConfig {
         applicationId "it.fmt.games.reversi.android"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 200
-        versionName "2.0.0"
+        versionCode 205
+        versionName "2.0.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         setProperty("archivesBaseName", "$applicationId-$versionName")
@@ -43,7 +43,7 @@ android {
     }
     buildTypes {
         debug {
-            buildConfigField "boolean", "AUTOMATIC_NETWORK_PLAYER", 'true'
+            buildConfigField "boolean", "AUTOMATIC_NETWORK_PLAYER", 'false'
             buildConfigField "long", "THINKING_TIME", '100'
             buildConfigField "boolean", "LOG_ENABLED", "true"
         }
@@ -52,7 +52,7 @@ android {
             buildConfigField "long", "THINKING_TIME", '1200'
             buildConfigField "boolean", "LOG_ENABLED", "false"
 
-            minifyEnabled true
+           // minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
 
@@ -115,10 +115,6 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.28.1'
     implementation 'com.google.dagger:dagger:2.28.1'
 
-    // Jackson JSON
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
-
     // logger
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
@@ -128,9 +124,6 @@ dependencies {
 
     testImplementation 'net.lachlanmckee:timber-junit-rule:1.0.1'
     // https://stackoverflow.com/questions/35562238/log-messages-in-android-studio-junit-test
-//    testImplementation 'org.powermock:powermock:1.6.5'
-//    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
-//    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
