--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     def lifecycle_version = '2.2.0'
     def nav_version = '2.3.0'
     def room_version = '2.2.5'
